--- a/.example.env
+++ b/.example.env
@@ -2,3 +2,7 @@ DATABASE_URL=postgres://admin:password@localhost:5432/gpav
 SECRET_KEY=1234
 DEBUG=true
 SHOW_PRIVATE_POSTS=true
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_STORAGE_BUCKET_NAME=
+AWS_S3_REGION_NAME=
